components/Hero/Hero.module.scss
@import "../../styles/fonts";

.heroContainer {
  margin: 0;
  padding: 0;
  width: 100%;
  height: 50vh;
}
.heroWrapper {
  height: 100%;
  // background-color: rgb(241, 134, 134);
  display: grid;
  grid-template-rows: 1fr 1fr;
}
.heroTyping {
  // background-color: rgb(211, 50, 50);
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: 1fr 1fr;
  align-items: center;
  padding: 5rem;
  font-family: "Oxygen", sans-serif;
  font-size: 50px;
  justify-items: left;
  @media only screen and (max-width: 767px) {
    justify-items: center;
    font-size: 40px;
  }
}

.subheading {
  font-family: $primary-font;
  font-size: 30px;
  @media only screen and (max-width: 767px) {
    font-size: 20px;
  }
}

